@@ -7,9 +7,9 @@
 		</f:if>
 	</f:then>
 	<f:else>
-		<f:link.page additionalParams="{L: '{option.uid}'}" addQueryString="1" argumentsToBeExcludedFromQueryString="{settings.removeParams}"  class="flag" target="{settings.target}"><img src="{f:uri.image(src: '{option.flagFile}')}" title="{option.title}" alt="{option.title}" class="tx-srlanguagemenu-flag-linked" /></f:link.page>
+		<f:link.page additionalParams="{L: '{option.uid}'}" addQueryString="1" addQueryStringMethod="GET" argumentsToBeExcludedFromQueryString="{settings.removeParams}"  class="flag" target="{settings.target}"><img src="{f:uri.image(src: '{option.flagFile}')}" title="{option.title}" alt="{option.title}" class="tx-srlanguagemenu-flag-linked" /></f:link.page>
 		<f:if condition="{settings.showLinkWithFlag}">
-			<f:link.page additionalParams="{L: '{option.uid}'}" addQueryString="1" argumentsToBeExcludedFromQueryString="{settings.removeParams}" class="title" target="{settings.target}">{option.title}</f:link.page>
+			<f:link.page additionalParams="{L: '{option.uid}'}" addQueryString="1" addQueryStringMethod="GET" argumentsToBeExcludedFromQueryString="{settings.removeParams}" class="title" target="{settings.target}">{option.title}</f:link.page>
 		</f:if>
 	</f:else>
 </f:if>
