@@ -4,6 +4,6 @@
 		<f:link.external uri="{option.externalUrl}" class="linked-language" target="{settings.target}">{option.title}</f:link.external>
 	</f:then>
 	<f:else>
-		<f:link.page additionalParams="{L: '{option.uid}'}" addQueryString="1" argumentsToBeExcludedFromQueryString="{settings.removeParams}" class="linked-language" target="{settings.target}">{option.title}</f:link.page>
+		<f:link.page additionalParams="{L: '{option.uid}'}" addQueryString="1" addQueryStringMethod="GET" argumentsToBeExcludedFromQueryString="{settings.removeParams}" class="linked-language" target="{settings.target}">{option.title}</f:link.page>
 	</f:else>
 </f:if>
