@@ -7,7 +7,7 @@
 					<option value="{f:uri.external(uri: '{option.externalUrl}')->f:format.htmlentities()}" {f:if(condition: '{settings.list.header}', then: '', else: ' selected="selected"')}>{option.title}</option>
 				</f:then>
 				<f:else>
-					<option value="{f:uri.page(additionalParams: {L: '{option.uid}'}, addQueryString: '1', argumentsToBeExcludedFromQueryString: '{settings.removeParams}')->f:format.htmlentities()}" {f:if(condition: '{settings.list.header}', then: '', else: ' selected="selected"')}>{option.title}</option>
+					<option value="{f:uri.page(additionalParams: {L: '{option.uid}'}, addQueryString: '1', addQueryStringMethod: 'GET', argumentsToBeExcludedFromQueryString: '{settings.removeParams}')->f:format.htmlentities()}" {f:if(condition: '{settings.list.header}', then: '', else: ' selected="selected"')}>{option.title}</option>
 				</f:else>
 			</f:if>
 		</f:if>
@@ -18,7 +18,7 @@
 				<option value="{f:uri.external(uri: '{option.externalUrl}')}">{option.title}</option>
 			</f:then>
 			<f:else>
-				<option value="{f:uri.page(additionalParams: {L: '{option.uid}'}, addQueryString: '1', argumentsToBeExcludedFromQueryString: '{settings.removeParams}')->f:format.htmlentities()}">{option.title}</option>
+				<option value="{f:uri.page(additionalParams: {L: '{option.uid}'}, addQueryString: '1', addQueryStringMethod: 'GET', argumentsToBeExcludedFromQueryString: '{settings.removeParams}')->f:format.htmlentities()}">{option.title}</option>
 			</f:else>
 		</f:if>
 	</f:else>
