@@ -1,5 +1,9 @@
 2020-10-17  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
 
+	* Resolves #87928: Language switch and addQueryString for routing fails
+
+2020-10-17  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
+
 	* Resolves #91829: TYPO3 10 Support
 	* Update version to 7.0.0
 
